src/test/deca/syntax/invalid/inst/test_inst_if_without_braces.deca
// Description:
//    tests de programme syntaxiquement incorrects : if sans crochet
//
// Resultats:
//    Ligne 13: mismatched input '{' expecting '('
//    
//
// Historique:
//    cree le 01/01/2024

{
        int i = 0;
        if (i < 10)
                println("Hello World!");
                i = i + 1;
        
}
